@@ -6,7 +6,7 @@
 # GitHub:  https://github.com/szczyglis-dev/py-gpt   #
 # MIT License                                        #
 # Created By  : Marcin Szczygliński                  #
-# Updated Date: 2024.03.11 01:00:00                  #
+# Updated Date: 2024.11.14 05:00:00                  #
 # ================================================== #
 
 import datetime
@@ -81,7 +81,7 @@ class RedisProvider(BaseStore):
         storage_context = StorageContext.from_defaults(
             vector_store=vector_store,
         )
-        self.indexes[id] = self.index_from_store(vector_store, storage_context)
+        self.indexes[id] = self.index_from_store(vector_store, storage_context, service_context)
         return self.indexes[id]
 
     def store(self, id: str, index: BaseIndex = None):
